# Kizmeow-NFT-Discord-Bot

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  chain_detail.json  chain_to_exp.json  collection_data.json  collection_name_autocomplete.json  collection_name_data.json  example_ac.json  main.py  pyproject.toml  requirements.txt  setting.json  terms of service.md  test.py  tos.md  讀我.md
Archive/Customize bots/Kizmeow-Anifty-NFT-Tracker/: main.py  pyproject.toml
Kizmeow NFT Bot/: main.py
Kizmeow NFT Tracker V2/: main.py  pyproject.toml
Kizmeow NFT Tracker V3/: config.py  main.py
Kizmeow OpenSea Trade Tracker/: main.py
Kizmeow-Etherscan-And-OpenseaChinese-community/: main.py
Kizmeow-NFT-Trackercommunity/: main.py
V3/: main.py  pyproject.toml
V4/: .env.example  main.py
api/: ens_to_address.py  get_gas_blocknative.py  get_gas_etherscan.py  get_gas_quicknode.py  get_os_account.py  get_os_collection.py  get_os_collection_statistics.py  get_os_nft.py  os_account.py  resp.json
api_requests/: looksrare.py  modulenft.py  opensea.py
bot/: keep_alive.py  main.py
bot English/: main.py
bot_Chinese/: main.py
bot_English/: main.py
buttons/: buttons.py
callback/: fav_collection_button_callback.py  fav_nft_button_callback.py
cogs/: address_converter.py  collection.py  feedback.py  gas.py  help.py  nft.py  opensea_account.py  opensea_collection.py  opensea_nft.py  ping.py  reload_cmds.py  setting.py  settings.py
embed/: address_converter_embed.py  err_embed.py  gas_embed.py  opensea_account_embed.py  (+4 more)
(+63 files in other folders)
